--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,4 @@
-@media (max-width: 414px) {
-    #container {
-        width: 100%;
-        height: 100%;
-    }
-}
-
-#container {
-    width: 390px;
-    height: 100%;
+.container {
+    width: 100vw;
+    height: 100vh;
 }
