--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 body {
-    margin: auto;
-    display: flex;
+    margin: 0;
+    font-family: 'pretendard';
+}
+
+@font-face {
+  font-family: 'pretendard';
+  src: url(./assets/font/Pretendard-Regular.otf);
 }
